remove fullproduction auto replay because its broken